infrastructure/configs/crowdsec/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: crowdsec
spec:
  forwardAuth:
    address: http://crowdsec-traefik-bouncer-service.crowdsec.svc.cluster.local:80/api/v1/forwardAuth
    trustForwardHeader: true
